--- a/SpaceHero/SpaceHero.vcxproj
+++ b/SpaceHero/SpaceHero.vcxproj
@@ -143,6 +143,8 @@
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="SpaceHero.cpp" />
     <ClCompile Include="SpaceObject.cpp" />
+    <ClCompile Include="StartButton.cpp" />
+    <ClCompile Include="WelcomeScreen.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +160,8 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="SpaceHero.h" />
     <ClInclude Include="SpaceObject.h" />
+    <ClInclude Include="StartButton.h" />
+    <ClInclude Include="WelcomeScreen.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SpaceHero.rc" />
